# track-manipulation

./: .gitignore  CMakeLists.txt  package.xml  track_manipulation.cpp  track_space_justin_demo.cpp
catkin/: CMakeLists.txt  package.xml
include/: SDFPrior.hpp  SegmentationPrior.hpp  priors.hpp  viridis.hpp
lcm_depth_provider/: CMakeLists.txt  lcm_depth_provider.cpp  lcm_depth_provider.hpp
lcmtypes/: image_class.lcm  image_class_probability_t.lcm
src/: SDFPrior.cpp  SegmentationPrior.cpp  priors.cpp
